--- a/002. Zaliczeniowy/index.html
+++ b/002. Zaliczeniowy/index.html
@@ -6,17 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>GENERATOR HASEŁ</title>
+    <title>Zaliczenie</title>
 </head>
 <body>
-    <div>
-        <h1>Generator Haseł</h1>
-        <label>Wygenerowane hasło</label><br>
-        <input type="text" id="word"><br>
-        <button onclick="generatePassword()">Wygeneruj hasło</button>
-    </div>
-    <div>
-        <h1>test</h1>
-    </div>
+    
 </body>
 </html>
