--- a/Lekcja 6/Kalkulator/index.html
+++ b/Lekcja 6/Kalkulator/index.html
@@ -4,39 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" >
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Calculator</title>
+    <title>Kalkulator</title>
 </head>
 <body>
-    <div class="cal">
-        <div>
-            <input type="text" id="result" value=""><br>
-        </div>
-        <div>
-            <input type="number" id="number1" value="1">
-            <input type="number" id="number2" value="2">
-            <input type="number" id="number3" value="3">
-            <input type="text" id="plus" value="+"><br>
-        </div> 
-        <div>
-            <input type="number" id="number4" value="4">
-            <input type="number" id="number5" value="5">
-            <input type="number" id="number6" value="6">
-            <input type="text" id="minus" value="-"><br>
-        </div>
-        <div>
-            <input type="number" id="number7" value="7">
-            <input type="number" id="number8" value="8">
-            <input type="number" id="number9" value="9">
-            <input type="text" id="times" value="X"><br>
-        </div> 
-        <div>
-            <input type="text" id="clear" value="C">
-            <input type="number" id="number0" value="0">
-            <input type="text" id="divide" value="/">
-            <button type="submit" onclick="result()">=</button>
-        </div>
+    <div class="display">
+    <p id="output">0</p> 
+    </div> 
+    <div class="first">
+        <button id="clear" onclick="forclear()">C</button>
+        <button id="modulo" value="%" onclick="fordisplay('%')">%</button>
+        <button id="dzielenie" value="/" onclick="fordisplay('/')">/</button>
+    </div>
+    <div class="second">
+        <button id="one" value="1" onclick="fordisplay('1')">1</button>
+        <button id="two" value="2" onclick="fordisplay('2')">2</button>
+        <button id="three" value="3" onclick="fordisplay('3')">3</button>
+        <button id="times" value="X" onclick="fordisplay('*')">X</button>
+    </div>
+    <div class="third">
+        <button id="four" value="4" onclick="fordisplay('4')">4</button>
+        <button id="five" value="5" onclick="fordisplay('5')">5</button>
+        <button id="six" value="6" onclick="fordisplay('6')">6</button>
+        <button id="minus" value="-" onclick="fordisplay('-')">-</button>
+    </div>
+    <div class="fourth">
+        <button id="seven" value="7" onclick="fordisplay('7')">7</button>
+        <button id="eight" value="8" onclick="fordisplay('8')">8</button>
+        <button id="nine" value="9" onclick="fordisplay('9')">9</button>
+        <button id="plus" value="+" onclick="fordisplay('+')">+</button>
+    </div>
+    <div class="fifth">
+        <button id="zero" value="0" onclick="fordisplay('0')">0</button>
+        <button id="dot" value="." onclick="fordisplay('.')">.</button>
+        <button id="equal" value="=" onclick="solve()">=</button>
     </div>
 </body>
 </html>
