--- a/Lekcja 18/index.html
+++ b/Lekcja 18/index.html
@@ -20,16 +20,16 @@
             
         <label>Kolor czcionki:</label>
             <input type="color" id="fontc">
-            <button id="borderconfirm" onclick="fontColor()">✓</button><br/>
+            <button id="fontcolor" onclick="fontColor()">✓</button><br/>
 
-        <label>Format tekstu:</label><br>
-            <label>Pogrubiony</label>
-            <input type="checkbox">
-            <label>Pochylony</label>
-            <input type="checkbox">
-            <label>Podkreślony</label>
-            <input type="checkbox">
-            <button id="borderconfirm" onclick="">✓</button><br/>
+            <label>Format tekstu:</label><br>
+                <input type="checkbox" id="bold">
+                <label>Pogrubiony</label>
+                <input type="checkbox" id="italics">
+                <label>Pochylony</label>
+                <input type="checkbox" id="underline"> 
+                <label>Podkreślony</label>
+                <button id="textformat" onclick="textformat()">✓</button><br/>
 
         <button id="wielkiel">Zmień na wielie litery</button><br>
             
