--- a/Lekcja nr 25/zadanie 10/index.html
+++ b/Lekcja nr 25/zadanie 10/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
-    <title>Zadanie 3</title>
+    <title>Zadanie 10</title>
 </head>
 <body>
-    
+    <h3>Podaj swój adres email</h3>
+    <input type="email" id="email">
+    <button onclick="check()">Sprawdź</button>
 </body>
 </html>
