--- a/Świercz EE09.2/konfigurator.html
+++ b/Świercz EE09.2/konfigurator.html
@@ -33,7 +33,7 @@
 
         <!-- Zapytanie o ramkę-->
         <p>Czy rysunek ma mieć ramkę</p>
-        <input type="checkbox" id="cbox" class="cbox" onchange="change_border()" checked> Rysuj ramkę <br/>
+        <input type="checkbox" id="box" class="box" onchange="change_border()" checked> Rysuj ramkę <br>
 
         <!-- Rodzaj punktorów-->
         <p>Jaki jest typ punktora listy?</p>
@@ -46,7 +46,7 @@
 
     <div class="right" id="right">
 
-        <img src="gibraltar.jpg" alt="półwysep Gibraltar">
+        <img src="gibraltar.jpg" alt="półwysep Gibraltar" id="img">
 
         <ul id="lista2">
             <li>element1</li>
